fix scrollbars showing when mouse plugged into mac

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -248,7 +248,7 @@ html, body {
             margin: 0 10px 85px;
             background-color: rgba(38, 43, 51, 0.8);
             -webkit-backdrop-filter: blur(12px);
-            overflow: scroll;
+            overflow: auto;
 
             .decoration {
               width: 100%;
